Basic layout created

--- a/Todo/todo.html
+++ b/Todo/todo.html
@@ -8,6 +8,14 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>TODO List</h1>
+    <input type="text" id="new_task" placeholder="Add new Task" />
+    <button id="add">Add</button>
+
+    <div>
+      <textarea name="list" id="task_list" cols="100" rows="20"></textarea>
+      <div id="buttons"></div>
+    </div>
     <script src="todo.js"></script>
   </body>
 </html>
