Edit and delete buttons working

--- a/Todo/todo.html
+++ b/Todo/todo.html
@@ -12,9 +12,7 @@
     <input type="text" id="new_task" placeholder="Add new Task" />
     <button id="add">Add</button>
 
-    <div>
-      <textarea name="list" id="task_list" cols="100" rows="20"></textarea>
-      <div id="buttons"></div>
+      <ul id="task_list"></ul>
     </div>
     <script src="todo.js"></script>
   </body>
