--- a/Todo/todo.html
+++ b/Todo/todo.html
@@ -8,10 +8,12 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>TODO List</h1>
-    <input type="text" id="new_task" placeholder="Add new Task" />
-    <button id="add">Add</button>
-
+    <h1>TODO<img class="icon" src="todo_icon.png" alt="" />LIST</h1>
+    <div class="input">
+      <input type="text" id="new_task" placeholder="Add new Task" />
+      <button id="add" class="add">Add</button>
+    </div>
+    <div class="list">
       <ul id="task_list"></ul>
     </div>
     <script src="todo.js"></script>
