--- a/Todo/todo.html
+++ b/Todo/todo.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="todo.css" />
     <title>Document</title>
   </head>
-  <body>
-    <h1>TODO<img class="icon" src="todo_icon.png" alt="" />LIST</h1>
-    <div class="input">
-      <input type="text" id="new_task" placeholder="Add new Task" />
-      <button id="add" class="add">Add</button>
-    </div>
-    <div class="list">
-      <ul id="task_list"></ul>
+  <body background="bg.jpg">
+    <h1>TODO LIST</h1>
+    <div class="layout">
+      <div class="input">
+        <input type="text" id="new_task" placeholder="Add new task" />
+        <button id="add" class="add">Add</button>
+      </div>
+      <div class="list">
+        <ul id="task_list"></ul>
+      </div>
     </div>
     <script src="todo.js"></script>
   </body>
