--- a/Todo/todo.html
+++ b/Todo/todo.html
@@ -8,7 +8,7 @@
     <title>Document</title>
   </head>
   <body background="bg.jpg">
-    <h1>TODO LIST</h1>
+    <h1>Your Task-List</h1>
     <div class="layout">
       <div class="input">
         <input type="text" id="new_task" placeholder="Add new task" />
