--- a/Todo/todo.html
+++ b/Todo/todo.html
@@ -13,6 +13,7 @@
       <div class="input">
         <input type="text" id="new_task" placeholder="Add new task" />
         <button id="add" class="add">Add</button>
+        <button id="edit" class="add" style="display: none">Edit</button>
       </div>
       <div class="list">
         <ul id="task_list"></ul>
